[package]
name = "steamaccmanager"
version = "0.1.0"
authors = ["vldr <vlader101@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "shlobj", "tlhelp32", "handleapi", "winnt", "psapi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"